<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewWeather"
        android:layout_width="290dp"
        android:layout_height="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/peasone"
        android:text="@string/weather"
        android:textAlignment="center"
        android:textColor="?attr/text_color"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/imageViewMain"
        app:layout_constraintEnd_toStartOf="@+id/themeButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_weight="5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.531" />

    <Button
        android:id="@+id/themeButton"
        android:layout_width="55dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_night_theme_button"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/textViewWeather"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewMain"
        android:layout_width="281dp"
        android:layout_height="205dp"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:scaleX="1.2"
        android:scaleY="1.2"
        app:layout_constraintBottom_toTopOf="@+id/textViewCurTemp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline"
        app:srcCompat="@drawable/ic_cloudy_day" />

    <TextView
        android:id="@+id/textViewCurTemp"
        android:layout_width="102dp"
        android:layout_height="62dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/peasone"
        android:gravity="center"
        android:text="@string/curTemp"
        android:textAlignment="center"
        android:textColor="?attr/text_color"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewCurLoc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewMain" />

    <TextView
        android:id="@+id/textViewCurLoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/peasone"
        android:text="@string/curLoc"
        android:textColor="?attr/text_color"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewCurWeather"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCurTemp" />

    <TextView
        android:id="@+id/textViewCurWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/peasone"
        android:text="@string/curWeather"
        android:textColor="?attr/text_color"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCurLoc" />

    <TextView
        android:id="@+id/textViewThu"
        android:layout_width="58dp"
        android:layout_height="31dp"
        android:fontFamily="@font/peasone"
        android:gravity="center"
        android:text="@string/thu"
        android:textColor="?attr/text_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewWed"
        app:layout_constraintEnd_toStartOf="@+id/textViewFri"
        app:layout_constraintStart_toEndOf="@+id/textViewWed"
        app:layout_constraintTop_toTopOf="@+id/textViewWed" />

    <TextView
        android:id="@+id/textViewWed"
        android:layout_width="57dp"
        android:layout_height="31dp"
        android:fontFamily="@font/peasone"
        android:gravity="center"
        android:text="@string/wed"
        android:textColor="?attr/text_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewTue"
        app:layout_constraintEnd_toStartOf="@+id/textViewThu"
        app:layout_constraintStart_toEndOf="@+id/textViewTue"
        app:layout_constraintTop_toTopOf="@+id/textViewTue" />

    <TextView
        android:id="@+id/textViewFri"
        android:layout_width="57dp"
        android:layout_height="31dp"
        android:fontFamily="@font/peasone"
        android:gravity="center"
        android:text="@string/fri"
        android:textColor="?attr/text_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewThu"
        app:layout_constraintEnd_toStartOf="@+id/textViewSat"
        app:layout_constraintStart_toEndOf="@+id/textViewThu"
        app:layout_constraintTop_toTopOf="@+id/textViewThu" />

    <TextView
        android:id="@+id/textViewSun"
        android:layout_width="58dp"
        android:layout_height="31dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/peasone"
        android:gravity="center"
        android:text="@string/sun"
        android:textColor="?attr/text_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewSat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewSat"
        app:layout_constraintTop_toTopOf="@+id/textViewSat" />

    <TextView
        android:id="@+id/textViewSat"
        android:layout_width="58dp"
        android:layout_height="31dp"
        android:fontFamily="@font/peasone"
        android:gravity="center"
        android:text="@string/sat"
        android:textColor="?attr/text_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewFri"
        app:layout_constraintEnd_toStartOf="@+id/textViewSun"
        app:layout_constraintStart_toEndOf="@+id/textViewFri"
        app:layout_constraintTop_toTopOf="@+id/textViewFri" />

    <TextView
        android:id="@+id/textViewTue"
        android:layout_width="58dp"
        android:layout_height="31dp"
        android:fontFamily="@font/peasone"
        android:gravity="center"
        android:text="@string/tue"
        android:textColor="?attr/text_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewMon"
        app:layout_constraintEnd_toStartOf="@+id/textViewWed"
        app:layout_constraintStart_toEndOf="@+id/textViewMon"
        app:layout_constraintTop_toTopOf="@+id/textViewMon" />

    <TextView
        android:id="@+id/textViewMon"
        android:layout_width="57dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/peasone"
        android:gravity="center"
        android:text="@string/mon"
        android:textColor="?attr/text_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView18"
        app:layout_constraintEnd_toStartOf="@+id/textViewTue"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCurWeather"
        app:layout_constraintVertical_bias="0.51"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textViewMonTemp"
        android:layout_width="0dp"
        android:layout_height="31dp"
        android:fontFamily="@font/peasone"
        android:gravity="center"
        android:text="@string/monTemp"
        android:textColor="?attr/text_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView18"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textViewTueTemp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/peasone"
        android:gravity="center"
        android:text="@string/tueTemp"
        android:textColor="?attr/text_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewMonTemp"
        app:layout_constraintEnd_toEndOf="@+id/textView19"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView19"
        app:layout_constraintTop_toTopOf="@+id/textViewMonTemp" />

    <TextView
        android:id="@+id/textViewWedTemp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/peasone"
        android:gravity="center"
        android:text="@string/wedTemp"
        android:textColor="?attr/text_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewTueTemp"
        app:layout_constraintEnd_toEndOf="@+id/textView20"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView20"
        app:layout_constraintTop_toTopOf="@+id/textViewTueTemp" />

    <TextView
        android:id="@+id/textViewThuTemp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/peasone"
        android:gravity="center"
        android:text="@string/thuTemp"
        android:textColor="?attr/text_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewWedTemp"
        app:layout_constraintEnd_toEndOf="@+id/textView21"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView21"
        app:layout_constraintTop_toTopOf="@+id/textViewWedTemp" />

    <TextView
        android:id="@+id/textViewFriTemp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/peasone"
        android:gravity="center"
        android:text="@string/friTemp"
        android:textColor="?attr/text_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewThuTemp"
        app:layout_constraintEnd_toEndOf="@+id/textView22"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView22"
        app:layout_constraintTop_toTopOf="@+id/textViewThuTemp" />

    <TextView
        android:id="@+id/textViewSatTemp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/peasone"
        android:gravity="center"
        android:text="@string/satTemp"
        android:textColor="?attr/text_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewFriTemp"
        app:layout_constraintEnd_toEndOf="@+id/textView23"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView23"
        app:layout_constraintTop_toTopOf="@+id/textViewFriTemp" />

    <TextView
        android:id="@+id/textViewSunTemp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/peasone"
        android:gravity="center"
        android:text="@string/sunTemp"
        android:textColor="?attr/text_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewSatTemp"
        app:layout_constraintEnd_toEndOf="@+id/textView24"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView24"
        app:layout_constraintTop_toTopOf="@+id/textViewSatTemp" />

    <ImageView
        android:id="@+id/textView18"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="4dp"
        android:scaleType="centerCrop"
        android:scaleX="1.2"
        android:scaleY="1.2"
        app:layout_constraintBottom_toTopOf="@+id/textViewMonTemp"
        app:layout_constraintEnd_toStartOf="@+id/textViewTue"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMon"
        app:srcCompat="@drawable/ic_sunny"
        android:contentDescription="@string/sunny" />

    <ImageView
        android:id="@+id/textView24"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/textView23"
        app:layout_constraintEnd_toEndOf="@+id/textViewSun"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewSun"
        app:layout_constraintTop_toTopOf="@+id/textView23"
        app:srcCompat="@drawable/ic_cloudy" />

    <ImageView
        android:id="@+id/textView19"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/textView18"
        app:layout_constraintEnd_toStartOf="@+id/textViewWed"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewTue"
        app:layout_constraintTop_toTopOf="@+id/textView18"
        app:srcCompat="@drawable/ic_snowy" />

    <ImageView
        android:id="@+id/textView23"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/textView22"
        app:layout_constraintEnd_toStartOf="@+id/textViewSun"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textViewFri"
        app:layout_constraintTop_toTopOf="@+id/textView22"
        app:srcCompat="@drawable/ic_sunny_rainy" />

    <ImageView
        android:id="@+id/textView22"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/textView21"
        app:layout_constraintEnd_toEndOf="@+id/textViewFri"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textViewThu"
        app:layout_constraintTop_toTopOf="@+id/textView21"
        app:srcCompat="@drawable/ic_sunny_snowy" />

    <ImageView
        android:id="@+id/textView20"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/textView19"
        app:layout_constraintEnd_toStartOf="@+id/textViewThu"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewWed"
        app:layout_constraintTop_toTopOf="@+id/textView19"
        app:srcCompat="@drawable/ic_rainy" />

    <ImageView
        android:id="@+id/textView21"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/textView20"
        app:layout_constraintEnd_toEndOf="@+id/textViewThu"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewThu"
        app:layout_constraintTop_toTopOf="@+id/textView20"
        app:srcCompat="@drawable/ic_thunder" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

</androidx.constraintlayout.widget.ConstraintLayout>